--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 <body>
 	<div class="quiz-container">
 		<h1></h1>
-		<p id="question">PIM ย่อมาจากอะไร ?</p>
+		<p id="question">1. PIM ย่อมาจากอะไร ?</p>
 		<button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
 		<button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
 		<button class="button" onclick="checkAnswer('c')">C) พิม</button>
 		<button class="button" onclick="checkAnswer('d')">D) ภีม</button>
 		<p id="result"></p>
 	</div>
-   
+	<div class="quiz-container">
+		<h1></h1>
+		<p id="question">2. PIM ก่อตั้งเมื่อไหร ?</p>
+		<button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
+		<button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
+		<button class="button" onclick="checkAnswer('c')">C) พิม</button>
+		<button class="button" onclick="checkAnswer('d')">D) ภีม</button>
+		<p id="result"></p>
+	</div>
+   <p id="result3"></p>
 
 </body>
 </html>
