--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 	<script src="index.js" charset="utf-8"></script>
 </head>
 <body>
-	<div class="quiz-container">
-		<h1></h1>
-		<p id="question">1. PIM ย่อมาจากอะไร ?</p>
-		<button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
-		<button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
-		<button class="button" onclick="checkAnswer('c')">C) พิม</button>
-		<button class="button" onclick="checkAnswer('d')">D) ภีม</button>
-		<p id="result"></p>
-	</div>
-	<div class="quiz-container">
-		<h1></h1>
-		<p id="question">2. PIM ก่อตั้งเมื่อไหร ?</p>
-		<button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
-		<button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
-		<button class="button" onclick="checkAnswer('c')">C) พิม</button>
-		<button class="button" onclick="checkAnswer('d')">D) ภีม</button>
-		<p id="result"></p>
-	</div>
-   <p id="result3"></p>
+	<div>	
+		<div class="quiz-container">
+			<h1></h1>
+			<p id="question">1. PIM ย่อมาจากอะไร ?</p>
+			<button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
+			<button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
+			<button class="button" onclick="checkAnswer('c')">C) พิม</button>
+			<button class="button" onclick="checkAnswer('d')">D) ภีม</button>
+			<p id="result"></p>
+		</div>
+		<div class="quiz-container">
+			<h1></h1>
+			<p id="question">2. PIM ก่อตั้งเมื่อไหร ?</p>
+	                <button class="button" onclick="checkAnswer2('a')">A) 2565</button>
+	                <button class="button" onclick="checkAnswer2('b')">B) 2560</button>
+	                <button class="button" onclick="checkAnswer2('c')">C) 2555</button>
+	                <button class="button" onclick="checkAnswer2('d')">D) 2550</button>
+			<p id="result2"></p>
+		</div>
+	   	<p id="result3"></p>
+	</div>		
 
 </body>
 </html>
